# softskills-rag

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
app/: check_index.py  check_retrieval.py  serve_gradio.py
data/Charisma/: Charisma - Key Concepts for Enhanced Influence.md  Charisma's Impact on Leadership and Followership in Persuasion.md  learnable_elements_charisma.md
data/Emotional_intelligence/: Emotional Intelligence The Bedrock of Effective Influence.md  Emotional Intelligence for Influence - Key Concepts.md  Understanding Cognitive Biases in Persuasion.md
data/Negotiation/: Negotiate_like_fbi.md  getting_past_no.md  getting_to_yes.md  negotiation_genius.md  secrets_of_power_negotiating.md  shadow_negotiation.md
data/Persuasion/: How to Win Friends and Influence People - 10 Main Points.md  Influence The Psychology of Persuasion - 10 Main Points.md  The Art of Persuasion Understanding the Basics.md  The Power of Emotional Appeals (Pathos) in Persuasion.md  The Role of Credibility and Trust in Persuasion.md  verbal_judo.md
evals/: ground_truth.json
src/core/: index.py
src/softskills_rag.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/softskills_rag/core/: index.py  load_data.py  retrieval.py
src/softskills_rag/utils/: config.py
