[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "softskills-rag"
version = "0.1.0"
description = "Hybrid RAG on soft-skills notes with intent-aware routing"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]

# keep deps in requirements.txt; we won't duplicate here

[tool.setuptools.packages.find]
where = ["src"]
